// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanels renders the block tab 1`] = `
<DocumentFragment>
  <div
    class="m-tabs__tab-panel"
  >
    loading...
  </div>
</DocumentFragment>
`;

exports[`TabPanels renders the run tab 1`] = `
<DocumentFragment>
  <div
    class="m-tabs__tab-panel"
  >
    loading...
  </div>
</DocumentFragment>
`;

exports[`TabPanels renders the status tab 1`] = `
<DocumentFragment>
  <div
    class="m-tabs__tab-panel"
  >
    Test content
  </div>
</DocumentFragment>
`;
